list overflow corrected (#1939)

--- a/static/css/components/mybooks-list.less
+++ b/static/css/components/mybooks-list.less
@@ -36,6 +36,8 @@
   ul {
     display: flex;
     margin: 0;
+    flex-wrap: wrap;
+    
   }
   h3 {
     display: inline;
